--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 eframe = "0.21.3"
+egui_logger = "0.3.0"
+env_logger = "0.10.0"
+log = "0.4.17"
+once_cell = "1.17.1"
 rosc = "0.10.1"
 rust-i18n = "1.2.0"
+sys-locale = "0.3.0"
 tokio = "1.28.1"
