--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ once_cell = "1.17.1"
 rosc = "0.10.1"
 rust-i18n = "1.2.0"
 sys-locale = "0.3.0"
-tokio = "1.28.1"
+tokio = { version = "1.28.1", features = ["time", "full"] }
