--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,22 +15,22 @@ jobs:
             target: x86_64-unknown-linux-gnu
             bundle_dir: linux
             artifact_name: VRCCanvas.deb
-            asset_name: x86_64-unknown-linux-gnu
+            asset_name: VRCCanvas_x86_64-unknown-linux-gnu.deb
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
             bundle_dir: windows
             artifact_name: VRCCanvas.exe
-            asset_name: x86_64-pc-windows-gnu.exe
+            asset_name: VRCCanvas_x86_64-pc-windows-gnu.exe
           - os: macos-latest
             target: aarch64-apple-darwin
             bundle_dir: osx
             artifact_name: VRCCanvas.app
-            asset_name: aarch64-apple-darwin
+            asset_name: VRCCanvas_aarch64-apple-darwin.app
           - os: macos-latest
             target: x86_64-apple-darwin
             bundle_dir: osx
             artifact_name: VRCCanvas.app
-            asset_name: x86_64-apple-darwin
+            asset_name: VRCCanvas_x86_64-apple-darwin.app
 
     runs-on: ${{ matrix.os }}
 
@@ -43,6 +43,7 @@ jobs:
         with:
           toolchain: stable
           override: true
+          target: ${{ matrix.target }}
 
       - name: Install cargo-bundle to bundle binaries.
         uses: actions-rs/cargo@v1
@@ -56,7 +57,7 @@ jobs:
         with:
           use-cross: true 
           command: bundle
-          args: --release --target ${{ matrix.target }} --all-features --verbose
+          args: --release --target ${{ matrix.target }} --all-features
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.1.1
