--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           use-cross: true 
-          command: bundle
+          command: build
           args: --release --target ${{ matrix.target }} --all-features
 
       - name: Upload binaries to release
