--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,6 @@ env_logger = "0.10.0"
 log = "0.4.17"
 once_cell = "1.17.1"
 rosc = "0.10.1"
-rust-i18n = "1.2.0"
+rust-i18n = { version = "1.2.1-alpha.0", git = "https://github.com/anosatsuk124/rust-i18n.git", branch = "fix-globerror" }
 sys-locale = "0.3.0"
 tokio = { version = "1.28.1", features = ["time", "full"] }
