--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,19 +20,19 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: vrc-canvas_amd64.deb.gz
-            asset_name: VRCCanvas_${{ matrix.os }}_${{ github.ref }}).deb.gz
+            asset_name: VRCCanvas_${{ github.ref }}_x86_64-unknown-linux-gnu.deb.gz
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
             artifact_name: vrc-canvas.exe.zip
-            asset_name: VRCCanvas_${{ matrix.os }}_${{ github.ref }}.zip
+            asset_name: VRCCanvas_${{ github.ref }}_x86_64-pc-windows-gnu.zip
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_name: VRCCanvas.app.zip
-            asset_name: VRCCanvas_${{ matrix.os }}_${{ github.ref }}.zip
+            asset_name: VRCCanvas_${{ github.ref }}_aarch64-apple-darwin.zip
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: VRCCanvas.app.zip
-            asset_name: VRCCanvas_${{ matrix.os }}_${{ github.ref }}.zip
+            asset_name: VRCCanvas_${{ github.ref }}_x86_64-apple-darwin.zip
 
     runs-on: ${{ matrix.os }}
 
