--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,6 @@ jobs:
     name: Release binary
     strategy:
       matrix:
-        asset_prefix: VRCCanvas
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -30,6 +29,8 @@ jobs:
           - os: macos-latest
             target: x86_64-apple-darwin
             asset_suffix: .zip
+    env:
+      asset_prefix: VRCCanvas
 
     runs-on: ${{ matrix.os }}
 
@@ -96,16 +97,16 @@ jobs:
 
       - name: Show the build result
         run: |
-          echo "# ${{ matrix.target }}} build result:" >> "$GITHUB_STEP_SUMMARY"
-          echo "" >> "$GITHUB_STEP_SUMMARY"
-          echo "```bash" >> "$GITHUB_STEP_SUMMARY"
-          tre -s target/ -E ".+/(incremental|deps|build)/"  >> "$GITHUB_STEP_SUMMARY"
-          echo "```" >> "$GITHUB_STEP_SUMMARY"
+          echo "# ${{ matrix.target }}} build result:" >> ${GITHUB_STEP_SUMMARY}
+          echo "" >> ${GITHUB_STEP_SUMMARY}
+          echo "```bash" >> ${GITHUB_STEP_SUMMARY}
+          tre -s target/ -E ".+/(incremental|deps|build)/"  >> ${GITHUB_STEP_SUMMARY}
+          echo "```" >> ${GITHUB_STEP_SUMMARY}
 
       - name: Set the asset name
         run: |
           echo "version=$(echo ${{ github.ref }} | sed -e "s#refs/tags/##g")" >> "$GITHUB_ENV"
-          echo "asset_name=${{ matrix.asset_prefix }}-${{ matrix.target }}-${{ env.version }}${{ matrix.asset_suffix }}" >> "$GITHUB_ENV"
+          echo "asset_name=${{ env.asset_prefix }}-${{ matrix.target }}-${{ env.version }}${{ matrix.asset_suffix }}" >> "$GITHUB_ENV"
 
       # Compressing the release binaries or bundles in order to upload them as a single file.
       - name: Compress binaries
