--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,12 +96,14 @@ jobs:
           args: tre
 
       - name: Show the build result
+        env:
+          MD_CODEBLOCK: "```"
         run: |
-          echo "# ${{ matrix.target }}} build result:" >> "$GITHUB_STEP_SUMMARY"
+          echo "# ${{ matrix.target }} build result:" >> "$GITHUB_STEP_SUMMARY"
           echo "" >> "$GITHUB_STEP_SUMMARY"
-          echo "```bash" >> "$GITHUB_STEP_SUMMARY"
+          echo "${{ env.MD_CODEBLOCK }}bash" >> "$GITHUB_STEP_SUMMARY"
           tre -s target/ -E ".+/(incremental|deps|build)/"  >> "$GITHUB_STEP_SUMMARY"
-          echo "```" >> "$GITHUB_STEP_SUMMARY"
+          echo "${{ env.MD_CODEBLOCK }}" >> "$GITHUB_STEP_SUMMARY"
 
       - name: Set the asset name
         run: |
