probably it works...

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,9 +101,9 @@ jobs:
         run: |
           echo "# ${{ matrix.target }} build result:" >> "$GITHUB_STEP_SUMMARY"
           echo "" >> "$GITHUB_STEP_SUMMARY"
-          echo "${{ env.MD_CODEBLOCK }}bash" >> "$GITHUB_STEP_SUMMARY"
+          echo ""${MD_CODEBLOCK}"bash" >> "$GITHUB_STEP_SUMMARY"
           tre -s target/ -E ".+/(incremental|deps|build)/"  >> "$GITHUB_STEP_SUMMARY"
-          echo "${{ env.MD_CODEBLOCK }}" >> "$GITHUB_STEP_SUMMARY"
+          echo "${MD_CODEBLOCK}" >> "$GITHUB_STEP_SUMMARY"
 
       - name: Set the asset name
         run: |
