Fix the compression process when it's for linux Makes the `gzip` output stream to stdout.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
       - name: Compress binaries
         if: endsWith(matrix.target, '-linux-gnu')
         run: |
-          bash -c "gzip target/${{ matrix.target }}/release/bundle/deb/*.deb > target/${{ env.asset_name }}"
+          bash -c "gzip -c target/${{ matrix.target }}/release/bundle/deb/*.deb > target/${{ env.asset_name }}"
 
       - name: Compress binaries
         if: endsWith(matrix.target, '-windows-gnu')
