--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,23 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             asset_suffix: .deb.gz
+            cross: false
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            asset_suffix: .deb.gz
+            cross: true
           - os: ubuntu-latest
             target: x86_64-pc-windows-gnu
             asset_suffix: .zip
+            cross: true
           - os: macos-latest
             target: aarch64-apple-darwin
             asset_suffix: .zip
+            cross: false
           - os: macos-latest
             target: x86_64-apple-darwin
             asset_suffix: .zip
+            cross: false
     env:
       asset_prefix: VRCCanvas
 
@@ -40,53 +48,63 @@ jobs:
         uses: nschloe/action-cached-lfs-checkout@v1
 
       # Installing the linux toochain because `cross` command on linux is used for Windows compilation.
-      - name: Install stable toolchain (when the target is Windows).
-        if: matrix.target == 'x86_64-pc-windows-gnu'
+      - name: Install stable toolchain (when `matrix.cross` is `true`).
+        if: matrix.cross
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           target: x86_64-unknown-linux-gnu
 
-      - name: Install stable toolchain (when the target is not Windows).
-        if: matrix.target != 'x86_64-pc-windows-gnu'
+      - name: Install stable toolchain (when `matrix.cross` is `false`).
+        if: !matrix.cross
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
           target: ${{ matrix.target }}
 
-      # Caching the build cache to reduce the compilation time (without Windows).
-      # I use `cross` to compile to Windows from other runners. And it's not supported. It's why there's nothing effective even if it uses it.
-      - name: Rust Cache
-        if: matrix.target != 'x86_64-pc-windows-gnu'
+      # Caching the build cache to reduce the compilation time (when `matrix.cross` is `false`).
+      # This project uses `cross` to compile to non-native targets. And this action not supported. It's why there's nothing effective even if it uses it.
+      - name: Rust Cache (when `matrix.cross` is `false`).
+        if: !matrix.cross
         uses: Swatinem/rust-cache@v2.3.0
 
       # Installing cargo-bundle to bundle binaries.
       # FIXME: cargo-bundle is not supported using with `cross` command. So it couldn't bundle Windows' msi on linux.
       - name: Install cargo-bundle to bundle binaries.
-        if: matrix.target != 'x86_64-pc-windows-gnu'
+        if: !endsWith(matrix.target, '-windows-gnu') || !matrix.cross
         uses: actions-rs/cargo@v1
         with:
           command: install
           args: cargo-bundle --verbose
 
-      # Building the release binary for Windows with all features enabled using `cross` command on linux.
+      # Building the release binary for Windows with all features enabled using `cross` command on x86_64-linux.
       - name: Release build with all features (when the target is Windows).
         uses: actions-rs/cargo@v1
-        if: matrix.target == 'x86_64-pc-windows-gnu'
+        if: endsWith(matrix.target, '-windows-gnu')
         with:
           use-cross: true 
           command: build
           args: --release --target ${{ matrix.target }} --all-features
 
-      # Building the release bundle for other targets with `cargo-bundle` command.
-      - name: Release build with all features (when the target is not Windows).
+      # Building the release bundle for the target-specific format with `cargo-bundle` command natively on x86_64-linu.
+      - name: Build and Bundle deps with all features (when the target is not Windows). (without `cross`)
         uses: actions-rs/cargo@v1
-        if: matrix.target != 'x86_64-pc-windows-gnu'
+        if: !endsWith(matrix.target, '-windows-gnu') && !matrix.cross
         with:
           command: bundle
           args: --release --target ${{ matrix.target }} --all-features
+
+      # Building the release bundle for the target-specific format with `cargo-bundle` command using `cross` command on x86_64-linux.
+      # NOTE: `cargo-bundle` should be invoked in `cross` container as the cargo runner command. It needs to be defined in `Cross.toml` as a runner.
+      - name: Build and Bundle deps with all features (when the target is not Windows). (with `cross`)
+        uses: actions-rs/cargo@v1
+        if: !endsWith(matrix.target, '-windows-gnu') && matrix.cross
+        with:
+          use-cross: true 
+          command: run
+          args: -- --release --target ${{ matrix.target }} --all-features
 
       # Showing the build result.
 
