--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: nschloe/action-cached-lfs-checkout@v1
 
       # Installing the linux toochain because `cross` command on linux is used for Windows compilation.
-      - name: "Install stable toolchain (when `matrix.cross` is `true`)."
+      - name: Install stable toolchain (when `matrix.cross` is `true`).
         if: ${{ matrix.cross }}
         uses: actions-rs/toolchain@v1
         with:
@@ -56,7 +56,7 @@ jobs:
           override: true
           target: x86_64-unknown-linux-gnu
 
-      - name: "Install stable toolchain (when `matrix.cross` is `false`)."
+      - name: Install stable toolchain (when `matrix.cross` is `false`).
         if: ${{ !matrix.cross }}
         uses: actions-rs/toolchain@v1
         with:
@@ -66,7 +66,7 @@ jobs:
 
       # Caching the build cache to reduce the compilation time (when `matrix.cross` is `false`).
       # This project uses `cross` to compile to non-native targets. And this action not supported. It's why there's nothing effective even if it uses it.
-      - name: "Rust Cache (when `matrix.cross` is `false`)."
+      - name: Rust Cache (when `matrix.cross` is `false`).
         if: ${{ !matrix.cross }}
         uses: Swatinem/rust-cache@v2.3.0
 
@@ -89,7 +89,7 @@ jobs:
           args: --release --target ${{ matrix.target }} --all-features
 
       # Building the release bundle for the target-specific format with `cargo-bundle` command natively on x86_64-linu.
-      - name: "Build and Bundle deps with all features (when the target is not Windows). (without `cross`)"
+      - name: Build and Bundle deps with all features (when the target is not Windows). (without `cross`)
         uses: actions-rs/cargo@v1
         if: !endsWith(matrix.target, '-windows-gnu') && ${{ !matrix.cross }}
         with:
@@ -98,7 +98,7 @@ jobs:
 
       # Building the release bundle for the target-specific format with `cargo-bundle` command using `cross` command on x86_64-linux.
       # NOTE: `cargo-bundle` should be invoked in `cross` container as the cargo runner command. It needs to be defined in `Cross.toml` as a runner.
-      - name: "Build and Bundle deps with all features (when the target is not Windows). (with `cross`)"
+      - name: Build and Bundle deps with all features (when the target is not Windows). (with `cross`)
         uses: actions-rs/cargo@v1
         if: !endsWith(matrix.target, '-windows-gnu') && ${{ matrix.cross }}
         with:
