Add `winresource` to configure .exe metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "vrc-canvas"
 version = "0.1.0"
 edition = "2021"
 description = "An OSC tool to draw with sylus in VRChat."
+license = "Apache-2.0"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[package.metadata.winresource]
+OriginalFilename = "VRCCanvas.exe"
+LegalCopyright = "Copyright 2023- Satsuki Akiba"
 
 [package.metadata.bundle]
 name = "VRCCanvas"
@@ -45,3 +51,9 @@ rosc = "0.10.1"
 rust-i18n = { version = "1.2.1-alpha.0", git = "https://github.com/anosatsuk124/rust-i18n.git", branch = "fix-globerror" }
 sys-locale = "0.3.0"
 tokio = { version = "1.28.1", features = ["time", "full"] }
+
+[build-dependencies]
+winresource = "0.1"
+anyhow = "1.0.71"
+env_logger = "0.10.0"
+log = "0.4.17"
