Configure CI on every push. And disable to fail-fast.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
   build:
     name: Release binary
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
