--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ env:
 jobs:
   build:
     name: Run checks and tests
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
