--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,42 @@
 name = "vrc-canvas"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Satsuki Akiba <anosatsuk124@gmail.com>" ]
 description = "An OSC tool to draw with sylus in VRChat."
 license = "Apache-2.0"
 build = "build.rs"
+default-run = "xtasks"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+required-features = ["default"]
+
+[[bin]]
+name = "xtasks"
+required-features = ["xtasks"]
+
+[features]
+default = ["release", "xtasks"]
+
+# Release features
+release = ["release-core", "release-gui-native", "release-terminal"]
+release-core = ["core"]
+release-gui-native = ["release-core", "gui-native"]
+release-terminal = ["release-core", "terminal"]
+
+# Debug features
+debug = ["default"]
+
+# Core features
+core = ["dep:rosc"]
+gui = ["dep:eframe", "dep:egui_logger"]
+terminal = ["dep:clap"]
+
+# interface features
+xtasks = ["debug"]
+gui-wasm = ["gui"]
+gui-native = ["gui"]
 
 [package.metadata.winresource]
 OriginalFilename = "VRCCanvas.exe"
@@ -42,15 +73,16 @@ osx_url_schemes = ["dev.anosatsuk124.vrccanvas"]
 
 [dependencies]
 anyhow = "1.0.71"
-eframe = "0.21.3"
-egui_logger = "0.3.0"
+clap = { version = "4.2.7", features = ["derive"], optional = true }
+eframe = { version = "0.21.3", optional = true }
+egui_logger = { version = "0.3.0", optional = true }
 env_logger = "0.10.0"
 log = "0.4.17"
 once_cell = "1.17.1"
-rosc = "0.10.1"
+rosc = { version = "0.10.1", optional = true }
 rust-i18n = { version = "1.2.1-alpha.0", git = "https://github.com/anosatsuk124/rust-i18n.git", branch = "fix-globerror" }
 sys-locale = "0.3.0"
-tokio = { version = "1.28.1", features = ["time", "full"] }
+tokio = { version = "1.28.1", features = ["full"] }
 
 [build-dependencies]
 winresource = "0.1"
